--- a/css/store.css
+++ b/css/store.css
@@ -98,6 +98,68 @@ main{
     
 }
 
+.text{
+    color: rgb(205, 0, 102);
+}
+
+.map{
+    text-align: center;
+    max-width: 1000px;
+    width: 100%;
+    height: auto;
+}
+
+.map iframe{
+    width: 100%;
+}
+
+.shop_table{
+    display: table;
+    width: 100%;
+}
+
+.shop_table dl{
+    padding: 20px 0;
+    border-bottom: 1px solid var(--color-light-border, rgb(205, 0, 102));
+}
+
+
+
+.shop_table dd{
+    padding-left: 30px;
+}
+
+
+.cell{
+    display: table-cell;
+}
+
+
+.button{
+    display: block;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	width: 120px;
+	padding: 1rem 6rem;
+	font-weight: bold;
+	border: 2px solid rgb(205, 0, 102);
+	color: rgb(205, 0, 102);
+
+	border-radius: 120vh;
+	
+    transition: 0.5s;
+
+    padding: 1rem 6rem;
+    margin-top: 50px;
+}
+
+.button:hover{
+    color: #fff;
+	background: rgb(205, 0, 102);
+}
+
+
 
 /*フッター-------------------------------------*/
 footer{
